--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,19 @@
 .calc {
   margin: 50px auto;
-  width: 300px;
-  height: 500px;
-  border-radius: 20px;
+  width: 304px;
+  height: 484px;
   background: #000;
   color: #fff;
-  padding: 18px;
-  box-shadow: 4px 4px 4px #4f4f4f;
   font-family: Arial;
+  border-radius: 20px;
 }
 
 .calc_screen {
-  height: 125px;
+  height: 110px;
   padding: 10px;
   display: grid;
   justify-items: end;
-  align-items: end;
-  margin-bottom: 25px;
+  align-items: center;
 }
 
 p {
@@ -24,18 +21,46 @@ p {
   font-size: 4rem;
 }
 
+.btn_point {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  height: 40px;
+  width: 86px;
+}
+
+.point {
+  width: 20px;
+  height: 20px;
+  background: white;
+  border-radius: 50%;
+  margin: 4px;
+}
+
+.bg_point_red {
+  background: red;
+}
+
+.bg_point_yellow {
+  background: yellow;
+}
+
+.bg_point_green {
+  background: green;
+}
+
 .buttons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 7px;
+  grid-gap: 2px;
   justify-items: center;
+  padding: 2px;
 }
 
 .btn {
-  width: 60px;
+  width: 72px;
   height: 60px;
   background: #333;
-  border-radius: 50%;
   text-align: center;
   line-height: 60px;
   font-size: 20px;
@@ -45,8 +70,12 @@ p {
 
 .zero {
   grid-column: 1/3;
-  width: 100%;
-  border-radius: 34px;
+  width: 99%;
+  border-radius: 0 0 0 20px;
+}
+
+.equal {
+  border-radius: 0 0 20px 0;
 }
 
 .btn:hover {
