--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,10 @@
-.calc {
-  margin: 50px auto;
-  width: 304px;
-  height: 484px;
-  background: #000;
-  color: #fff;
-  font-family: Arial;
+.calculator {
+  margin: 40px auto;
+  width: 300px;
+  height: 474px;
+  background-color: black;
+  color: white;
   border-radius: 20px;
-}
-
-.calc_screen {
-  height: 110px;
-  padding: 10px;
-  display: grid;
-  justify-items: end;
-  align-items: center;
-}
-
-p {
-  margin: 0;
-  font-size: 4rem;
 }
 
 .btn_point {
@@ -49,6 +35,18 @@ p {
   background: green;
 }
 
+.calc_screen {
+  display: flex;
+  height: 100px;
+  align-items: center;
+  justify-content: end;
+  margin: 10px;
+}
+
+p {
+  font-size: 50px;
+}
+
 .buttons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -65,7 +63,6 @@ p {
   line-height: 60px;
   font-size: 20px;
   cursor: pointer;
-  user-select: none;
 }
 
 .zero {
@@ -78,18 +75,10 @@ p {
   border-radius: 0 0 20px 0;
 }
 
-.btn:hover {
-  filter: brightness(120%);
-}
-
-.btn:active {
-  filter: brightness(50%);
-}
-
-.bg_gray {
-  background: #a6a6a6;
-}
-
-.bg_orange {
+.bg_btn_orange {
   background: orange;
+}
+
+.bg_btn_gray {
+  background: darkgrey;
 }
