Add hover selector to buttons

--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,11 @@ p {
 .bg_btn_gray {
   background: darkgrey;
 }
+
+.btn:hover {
+  filter: brightness(130%);
+}
+
+.btn:active {
+  filter: brightness(80%);
+}
