--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 .btn_point {
   display: flex;
   align-items: center;
-  margin-left: 20px;
+  margin-left: 6px;
   height: 40px;
   width: 86px;
 }
@@ -35,6 +35,16 @@
   background: green;
 }
 
+.result {
+  height: 76px;
+  width: 270px;
+  text-align: end;
+  background-color: black;
+  color: white;
+  font-size: 50px;
+  border-width: 0px;
+}
+
 .calc_screen {
   display: flex;
   height: 100px;
@@ -45,12 +55,13 @@
 
 p {
   font-size: 50px;
+  padding-right: 12px;
 }
 
 .buttons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 2px;
+  gap: 2px;
   justify-items: center;
   padding: 2px;
 }
